remove unused flexbox properties

--- a/src/Rechnung.html
+++ b/src/Rechnung.html
@@ -418,11 +418,11 @@
     </table>
 
 
-    <p>Steuernummer: 232/1212/223<br />
+    <p>Steuernummer 232/155/23209<br />
         Kein Mehrwertsteuerausweis, da Kleinunternehmer nach §19 (1) UStG.</p><br>
     <hr><br>
     <div class="ticket">
-        <section class="ticket--card">
+        <section class="ticket--information">
             <h2 style="text-transform: uppercase;">Gebucht von</h2><br>
             <ul>
                 <li><strong>Name: </strong>Sebastian</li>
@@ -431,7 +431,7 @@
             </ul>
         </section>
 
-        <section class="ticket--card">
+        <section class="ticket--information ticket--card">
             <h2>TICKETS</h2><br>
             <p><span style="font-weight:bold;">Hiermit erhaltet ihr offiziell Zutritt zur dunklen Seite der Stadt
                     Berlin!</span><br><br>
@@ -447,15 +447,15 @@
                 </ol>
             </article><br><br>
         </section>
-        <section class="ticket--card">
+        <section class="ticket--information">
             <h2>TREFFPUNKT</h2><br>
             <p>Klosterstraße plus Bild</p><br>
         </section>
-        <section class="ticket--card">
+        <section class="ticket--information">
             <h2>INFORMATIONEN</h2><br>
             <p>Parken, Toilette, Zu Fuß, Wetterfeste Kleidung</p><br>
         </section>
-        <section class="ticket--card">
+        <section class="ticket--information">
             <h2>KONTAKT</h2>
             <p>Telefon Mail</p>
         </section>
