move and rename assets to theme

--- a/src/Rechnung.html
+++ b/src/Rechnung.html
@@ -290,7 +290,7 @@
             font-family: sans-serif;
         }
     </style>
-    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <link rel="stylesheet" href="./GruseltourBerlin2018/css/style.css" type="text/css" />
 </head>
 
 <body class="invoice vsc-initialized paper--a4">
@@ -452,7 +452,7 @@
             <p class="blocktext">Der Treffpunkt befindet sich vor der Klosterruine U-Bhf Klosterstraße. Direkt hinter
                 dem Alexa.
                 <span class="bold">Klosterstraße 73a, 10179 Berlin</span></p>
-            <img class="ticket__meeting-point" src="img/Treffpunkt Gruseltour Berlin.png" alt="Treffpunkt Gruseltour Berlin" />
+            <img class="ticket__meeting-point" src="./GruseltourBerlin2018/img/Treffpunkt Gruseltour Berlin.png" alt="Treffpunkt Gruseltour Berlin" />
         </section>
         <section class="ticket__information">
             <h2>INFORMATIONEN</h2>
