--- a/src/Rechnung.html
+++ b/src/Rechnung.html
@@ -199,7 +199,7 @@
                 <li>Facebook @GruseltourBerlin</li>
                 <li>Instagram @Gruseltour</li>
                 <li>Twitter @Gruseltour</li>
-                <li>Tripadvisor </li>
+                <li>Tripadvisor Gruseltour Berlin</li>
             </ul>
         </p>
     </footer>
